# pyroll-mauk-gottschling-flow-stress

./: hatch.toml  pyproject.toml
docs/: docs.md
pyroll/mauk_gottschling_flow_stress/: __init__.py  materials.py  mauk_gottschling_flow_stress.py
tests/: test_hook.py  test_solve.py
