[project]
name = "pyroll-mauk-gottschling-flow-stress"
description = "Plugin for PyRolL providing the flow stress approach and material database for the flow stress model of Mauk and Gottschling."
authors = [
    { name = "Christoph Renzing", email = "christoph.renzing@imf.tu-freiberg.de" }
]
license = "BSD-3-Clause"
packages = [
    { include = "pyroll/mauk_gottschling_flow_stress" }
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

requires-python = ">=3.9, <4.0"
dependencies = [
    "pyroll-core ~= 2.0"
]

dynamic = ["version"]

[project.urls]
Homepage = "https://pyroll-project.github.io"
Repository = "https://github.com/pyroll-project/pyroll-mauk-gottschling-flow-stress"
Documentation = "https://github.com/pyroll-project/pyroll-mauk-gottschling-flow-stress/blob/main/docs/docs.pdf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
